# deepx

./: .gitignore  .openlocal.toml  ARCHITECTURE.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  auto-dev-cli-blueprint.md  pyproject.toml
.autodev/sessions/: 20d74eb3fc6a.db-shm  20d74eb3fc6a.db-wal  20d74eb3fc6a.json  76381e2a8635.json  ab668560d62e.json
.github/workflows/: ci.yml
docker/: base-go.Dockerfile  base-java.Dockerfile  base-node.Dockerfile  base-polyglot.Dockerfile  entrypoint.sh
src/autodev/: __init__.py  cli.py  config.py  doctor.py  runner.py  session.py  telemetry.py
src/autodev/agent/: __init__.py  build.py  fallback.py  memory.py  redaction.py  retry.py  subagents.py
src/autodev/commands/: __init__.py  init_cmd.py  repl.py  run_cmd.py
src/autodev/providers/: __init__.py  base.py  groq_provider.py  llamacpp_provider.py  ollama_provider.py
src/autodev/sandbox/: __init__.py  docker_backend.py  image_select.py  policy.py
src/autodev/ui/: __init__.py  approval.py  console.py
src/openlocal/: __init__.py  cli.py  config.py  doctor.py  runner.py  session.py  telemetry.py
src/openlocal/agent/: __init__.py  build.py  fallback.py  memory.py  redaction.py  repair_loop.py  retry.py  subagents.py
src/openlocal/commands/: init_cmd.py  repl.py  run_cmd.py
src/openlocal/docker/: base-aiml.Dockerfile  base-node.Dockerfile  base-polyglot.Dockerfile  base-python.Dockerfile
src/openlocal/plugins/: web_search.py
src/openlocal/providers/: __init__.py  base.py  groq_provider.py  llamacpp_provider.py  ollama_provider.py
tests/: conftest.py  test_agent_build.py  test_cli.py  test_config.py  test_docker_backend.py  test_image_select.py  test_middleware.py  test_policy.py  test_providers.py  test_secret_scan.py  test_session.py
(+17 files in other folders)
