[project]
name = "auto-dev-cli"
version = "0.1.0"
description = "A local-first, provider-agnostic, sandboxed coding-agent CLI built on deepagents."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Auto-Dev CLI contributors" }]
keywords = ["ai", "agent", "cli", "ollama", "groq", "llama.cpp", "deepagents", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "deepagents>=0.6.12",
    "langchain-ollama>=1.1.0",
    "docker>=7.0",
    "keyring>=25.7.0",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "tomli-w>=1.2.0",
    "httpx>=0.28.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[project.optional-dependencies]
groq = ["langchain-groq>=1.1.3"]
llamacpp = ["langchain-openai>=1.3.5"]
all = ["auto-dev-cli[groq,llamacpp]"]

[project.scripts]
autodev = "autodev.cli:app"

[project.urls]
Homepage = "https://github.com/auto-dev-cli/auto-dev-cli"
Repository = "https://github.com/auto-dev-cli/auto-dev-cli"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "autodev"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer uses `= typer.Option(...)` defaults idiomatically.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
